RESOLVED FIXED61823
[Chromium] webkitStorageInfo methods (for quota API) should not crash when error callback is not given.
https://bugs.webkit.org/show_bug.cgi?id=61823
Summary [Chromium] webkitStorageInfo methods (for quota API) should not crash when er...
Kinuko Yasuda
Reported 2011-05-31 17:25:30 PDT
[Chromium] webkitStorageInfo methods (for quota API) should not crash when error callback is not given. webkitStorageInfo.queryUsageAndQuota() and webkitStorageInfo.requestQuota() take error callback as optional argument, but it crashes when null is given as the error callback.
Attachments
Patch (2.74 KB, patch)
2011-05-31 17:29 PDT, Kinuko Yasuda
no flags
Patch (11.43 KB, patch)
2011-05-31 20:57 PDT, Kinuko Yasuda
no flags
Patch (10.14 KB, patch)
2011-05-31 21:26 PDT, Kinuko Yasuda
tkent: review+
Kinuko Yasuda
Comment 1 2011-05-31 17:29:10 PDT
Kent Tamura
Comment 2 2011-05-31 17:49:05 PDT
Comment on attachment 95518 [details] Patch Why the patch has no test?
Kinuko Yasuda
Comment 3 2011-05-31 20:57:21 PDT
Kinuko Yasuda
Comment 4 2011-05-31 20:58:30 PDT
Added tests. (We have not added DRT/test-shell support for quota API yet and it is chromium-only fix, so the test is currently marked to be skipped everywhere for now.)
Kent Tamura
Comment 5 2011-05-31 21:01:43 PDT
Comment on attachment 95542 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=95542&action=review > LayoutTests/ChangeLog:18 > + * storage/storageinfo-query-usage.html: Removed unnecessary js inclusion. > + * storage/storageinfo-request-quota.html: Removed unnecessary js inclusion. Are they related to this bug? > LayoutTests/storage/storageinfo-no-callbacks.html:9 > +<script src="script-tests/storageinfo-no-callbacks.js"></script> nit: We may merge the .js file to this.
Kinuko Yasuda
Comment 6 2011-05-31 21:26:44 PDT
Kent Tamura
Comment 7 2011-05-31 21:29:36 PDT
Comment on attachment 95544 [details] Patch ok
Kinuko Yasuda
Comment 8 2011-05-31 22:10:12 PDT
Note You need to log in before you can comment on or make changes to this bug.